src/main/python/compiladoresParser.py
# Generated from /home/nacho/Downloads/compiladores/src/main/python/compiladores.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "';'", "','", 
                     "'{'", "'}'", "'('", "')'", "'='", "'<'", "'>'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'true'", 
                     "'false'", "'&&'", "'||'", "'=='", "'!='", "'if'", 
                     "'while'", "'for'", "'return'", "'public'", "'private'", 
                     "'void'", "'int'", "'double'", "'char'", "'bool'" ]

    symbolicNames = [ "<INVALID>", "WS", "ENTERO", "PYC", "COMA", "LA", 
                      "LC", "PA", "PC", "IGUAL", "MENOR", "MAYOR", "MAS", 
                      "MENOS", "MUL", "DIV", "MOD", "UMAS", "UMENOS", "TRUE", 
                      "FALSE", "AND", "OR", "EQUI", "DIST", "IF", "WHILE", 
                      "FOR", "RETURN", "PUBLIC", "PRIVATE", "VOID", "INT", 
                      "DOUBLE", "CHAR", "BOOL", "ID" ]

    RULE_tipo_dato = 0
    RULE_programa = 1
    RULE_lineas = 2
    RULE_instruccion = 3
    RULE_estructuras_comp = 4
    RULE_bloque = 5
    RULE_bloque_alt = 6
    RULE_estructuras = 7
    RULE_asignable = 8
    RULE_variable = 9
    RULE_declaracion = 10
    RULE_asignacion = 11
    RULE_asignaciones = 12
    RULE_igualacion = 13
    RULE_relacion = 14
    RULE_comparacion = 15
    RULE_booleanos = 16
    RULE_expresion = 17
    RULE_termino = 18
    RULE_factor = 19
    RULE_iif = 20
    RULE_iwhile = 21
    RULE_ifor = 22
    RULE_funcion = 23
    RULE_bloque_funcion = 24
    RULE_tipo_retorno = 25
    RULE_acceso = 26
    RULE_parametro = 27
    RULE_parametros = 28
    RULE_asignables = 29
    RULE_firma = 30
    RULE_firma_prototipo = 31
    RULE_prototipo_funcion = 32
    RULE_declaracion_funcion = 33
    RULE_llamada_funcion = 34
    RULE_retorno = 35

    ruleNames =  [ "tipo_dato", "programa", "lineas", "instruccion", "estructuras_comp", 
                   "bloque", "bloque_alt", "estructuras", "asignable", "variable", 
                   "declaracion", "asignacion", "asignaciones", "igualacion", 
                   "relacion", "comparacion", "booleanos", "expresion", 
                   "termino", "factor", "iif", "iwhile", "ifor", "funcion", 
                   "bloque_funcion", "tipo_retorno", "acceso", "parametro", 
                   "parametros", "asignables", "firma", "firma_prototipo", 
                   "prototipo_funcion", "declaracion_funcion", "llamada_funcion", 
                   "retorno" ]

    EOF = Token.EOF
    WS=1
    ENTERO=2
    PYC=3
    COMA=4
    LA=5
    LC=6
    PA=7
    PC=8
    IGUAL=9
    MENOR=10
    MAYOR=11
    MAS=12
    MENOS=13
    MUL=14
    DIV=15
    MOD=16
    UMAS=17
    UMENOS=18
    TRUE=19
    FALSE=20
    AND=21
    OR=22
    EQUI=23
    DIST=24
    IF=25
    WHILE=26
    FOR=27
    RETURN=28
    PUBLIC=29
    PRIVATE=30
    VOID=31
    INT=32
    DOUBLE=33
    CHAR=34
    BOOL=35
    ID=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Tipo_datoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(compiladoresParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(compiladoresParser.DOUBLE, 0)

        def CHAR(self):
            return self.getToken(compiladoresParser.CHAR, 0)

        def BOOL(self):
            return self.getToken(compiladoresParser.BOOL, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_tipo_dato

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_dato" ):
                listener.enterTipo_dato(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_dato" ):
                listener.exitTipo_dato(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_dato" ):
                return visitor.visitTipo_dato(self)
            else:
                return visitor.visitChildren(self)




    def tipo_dato(self):

        localctx = compiladoresParser.Tipo_datoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tipo_dato)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.INT) | (1 << compiladoresParser.DOUBLE) | (1 << compiladoresParser.CHAR) | (1 << compiladoresParser.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineas(self):
            return self.getTypedRuleContext(compiladoresParser.LineasContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.lineas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def lineas(self):
            return self.getTypedRuleContext(compiladoresParser.LineasContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_lineas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineas" ):
                listener.enterLineas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineas" ):
                listener.exitLineas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineas" ):
                return visitor.visitLineas(self)
            else:
                return visitor.visitChildren(self)




    def lineas(self):

        localctx = compiladoresParser.LineasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lineas)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.instruccion()
                self.state = 77
                self.lineas()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(compiladoresParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estructuras_comp(self):
            return self.getTypedRuleContext(compiladoresParser.Estructuras_compContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionContext,0)


        def variable(self):
            return self.getTypedRuleContext(compiladoresParser.VariableContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruccion)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.estructuras_comp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.funcion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.variable()
                self.state = 86
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Estructuras_compContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estructuras(self):
            return self.getTypedRuleContext(compiladoresParser.EstructurasContext,0)


        def estructuras_comp(self):
            return self.getTypedRuleContext(compiladoresParser.Estructuras_compContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionContext,0)


        def variable(self):
            return self.getTypedRuleContext(compiladoresParser.VariableContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def bloque_alt(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_altContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_estructuras_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuras_comp" ):
                listener.enterEstructuras_comp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuras_comp" ):
                listener.exitEstructuras_comp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstructuras_comp" ):
                return visitor.visitEstructuras_comp(self)
            else:
                return visitor.visitChildren(self)




    def estructuras_comp(self):

        localctx = compiladoresParser.Estructuras_compContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_estructuras_comp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.estructuras()
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 92
                self.estructuras_comp()
                pass

            elif la_ == 2:
                self.state = 93
                self.funcion()
                pass

            elif la_ == 3:
                self.state = 94
                self.variable()
                self.state = 95
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.state = 97
                self.bloque_alt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LA(self):
            return self.getToken(compiladoresParser.LA, 0)

        def lineas(self):
            return self.getTypedRuleContext(compiladoresParser.LineasContext,0)


        def LC(self):
            return self.getToken(compiladoresParser.LC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladoresParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(compiladoresParser.LA)
            self.state = 101
            self.lineas()
            self.state = 102
            self.match(compiladoresParser.LC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloque_altContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LA(self):
            return self.getToken(compiladoresParser.LA, 0)

        def lineas(self):
            return self.getTypedRuleContext(compiladoresParser.LineasContext,0)


        def LC(self):
            return self.getToken(compiladoresParser.LC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque_alt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque_alt" ):
                listener.enterBloque_alt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque_alt" ):
                listener.exitBloque_alt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque_alt" ):
                return visitor.visitBloque_alt(self)
            else:
                return visitor.visitChildren(self)




    def bloque_alt(self):

        localctx = compiladoresParser.Bloque_altContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloque_alt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(compiladoresParser.LA)
            self.state = 105
            self.lineas()
            self.state = 106
            self.match(compiladoresParser.LC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructurasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iwhile(self):
            return self.getTypedRuleContext(compiladoresParser.IwhileContext,0)


        def iif(self):
            return self.getTypedRuleContext(compiladoresParser.IifContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compiladoresParser.IforContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_estructuras

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuras" ):
                listener.enterEstructuras(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuras" ):
                listener.exitEstructuras(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstructuras" ):
                return visitor.visitEstructuras(self)
            else:
                return visitor.visitChildren(self)




    def estructuras(self):

        localctx = compiladoresParser.EstructurasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estructuras)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.iwhile()
                pass
            elif token in [compiladoresParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.iif()
                pass
            elif token in [compiladoresParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.ifor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def ENTERO(self):
            return self.getToken(compiladoresParser.ENTERO, 0)

        def booleanos(self):
            return self.getTypedRuleContext(compiladoresParser.BooleanosContext,0)


        def expresion(self):
            return self.getTypedRuleContext(compiladoresParser.ExpresionContext,0)


        def llamada_funcion(self):
            return self.getTypedRuleContext(compiladoresParser.Llamada_funcionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_asignable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignable" ):
                listener.enterAsignable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignable" ):
                listener.exitAsignable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignable" ):
                return visitor.visitAsignable(self)
            else:
                return visitor.visitChildren(self)




    def asignable(self):

        localctx = compiladoresParser.AsignableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignable)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(compiladoresParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(compiladoresParser.ENTERO)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.booleanos()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.expresion(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.llamada_funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = compiladoresParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.INT, compiladoresParser.DOUBLE, compiladoresParser.CHAR, compiladoresParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.declaracion()
                pass
            elif token in [compiladoresParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.asignacion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_dato(self):
            return self.getTypedRuleContext(compiladoresParser.Tipo_datoContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = compiladoresParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.tipo_dato()
            self.state = 125
            self.asignacion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def IGUAL(self):
            return self.getToken(compiladoresParser.IGUAL, 0)

        def asignable(self):
            return self.getTypedRuleContext(compiladoresParser.AsignableContext,0)


        def asignaciones(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionesContext,0)


        def MAS(self):
            return self.getToken(compiladoresParser.MAS, 0)

        def MENOS(self):
            return self.getToken(compiladoresParser.MENOS, 0)

        def UMAS(self):
            return self.getToken(compiladoresParser.UMAS, 0)

        def UMENOS(self):
            return self.getToken(compiladoresParser.UMENOS, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = compiladoresParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(compiladoresParser.ID)
                self.state = 128
                _la = self._input.LA(1)
                if not(_la==compiladoresParser.MAS or _la==compiladoresParser.MENOS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 129
                self.match(compiladoresParser.IGUAL)
                self.state = 130
                self.asignable()
                self.state = 131
                self.asignaciones()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(compiladoresParser.ID)
                self.state = 134
                self.match(compiladoresParser.IGUAL)
                self.state = 135
                self.asignable()
                self.state = 136
                self.asignaciones()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.match(compiladoresParser.ID)
                self.state = 139
                _la = self._input.LA(1)
                if not(_la==compiladoresParser.UMAS or _la==compiladoresParser.UMENOS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 140
                self.asignaciones()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(compiladoresParser.ID)
                self.state = 142
                self.asignaciones()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(compiladoresParser.COMA, 0)

        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def IGUAL(self):
            return self.getToken(compiladoresParser.IGUAL, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_asignaciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignaciones" ):
                listener.enterAsignaciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignaciones" ):
                listener.exitAsignaciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignaciones" ):
                return visitor.visitAsignaciones(self)
            else:
                return visitor.visitChildren(self)




    def asignaciones(self):

        localctx = compiladoresParser.AsignacionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_asignaciones)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(compiladoresParser.COMA)
                self.state = 147
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(compiladoresParser.IGUAL)
                self.state = 149
                self.asignacion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgualacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUI(self):
            return self.getToken(compiladoresParser.EQUI, 0)

        def DIST(self):
            return self.getToken(compiladoresParser.DIST, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_igualacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgualacion" ):
                listener.enterIgualacion(self)
